[gd_scene load_steps=3 format=3 uid="uid://qd741gjicajr"]

[ext_resource type="Script" uid="uid://wv084my80ijj" path="res://scenes/ui/inventory/inventory_display.gd" id="1_ldey4"]
[ext_resource type="PackedScene" uid="uid://c2r63txfjknrf" path="res://scenes/ui/inventory/inventory_button.tscn" id="1_p0jmx"]

[node name="InventoryDisplay" type="CanvasLayer"]
script = ExtResource("1_ldey4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="InventoryButton4" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_p0jmx")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="InventoryButton1" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_p0jmx")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryButton3" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_p0jmx")]
unique_name_in_owner = true
layout_mode = 2

[node name="InventoryButton2" parent="MarginContainer/HBoxContainer" instance=ExtResource("1_p0jmx")]
unique_name_in_owner = true
layout_mode = 2
